--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "cloudinary": "^1.30.0",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
